[package]
name = "golibafl"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"

[build-dependencies]
anyhow = "1.0.100"

[dependencies]
libafl = { git = "https://github.com/AFLplusplus/LibAFL", rev="67f7474a7504597aa466efbddc456ded7f90d649", features = ["prelude",  "std", "derive"]}
libafl_bolts = { git = "https://github.com/AFLplusplus/LibAFL", rev="67f7474a7504597aa466efbddc456ded7f90d649"}
libafl_targets = { git = "https://github.com/AFLplusplus/LibAFL", rev="67f7474a7504597aa466efbddc456ded7f90d649", features = ["sancov_8bit", "observers", "libfuzzer", "sancov_cmplog", "sancov_pcguard_hitcounts"] }
clap = {version = "4.5.23", features = ["derive"]}
mimalloc = "0.1.43"