[package]
name = "golibafl"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"

[build-dependencies]
anyhow = "1.0.100"

[dependencies]
# TODO: Switch back to upstream LibAFL once git-aware scheduling is upstreamed.
libafl = { path = "/home/kevinv/LibAFL-history-aware/crates/libafl", features = ["prelude", "std", "derive", "tui_monitor"] }
libafl_bolts = { path = "/home/kevinv/LibAFL-history-aware/crates/libafl_bolts" }
libafl_targets = { path = "/home/kevinv/LibAFL-history-aware/crates/libafl_targets", features = ["sancov_8bit", "observers", "libfuzzer", "sancov_cmplog", "sancov_pcguard_hitcounts"] }
clap = {version = "4.5.23", features = ["derive"]}
mimalloc = "0.1.43"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
addr2line = "0.25.1"
object = "0.37.3"
